# modern-robotics-rs

./: Cargo.toml  README.md
src/: lib.rs  lie_algebra_.rs  multi_body.rs
src/kinematics/: mod.rs
src/lie_algebra/: mod.rs  rigid_body_motion.rs  rotation.rs
