[package]
name = "modern-robotics-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# parallel-compiler = true

[dependencies]
nalgebra = "0.32.3"
anyhow = "1.0.79"
urdf-rs = "0.8"
petgraph = "0.6"
termtree = "0.4.1"